--- a/react-editor/package.json
+++ b/react-editor/package.json
@@ -4,7 +4,11 @@
   "description": "editor-react",
   "main": "index.js",
   "scripts": {
-    "dev": "webpack serve --mode development --open --hot"
+    "dev": "webpack serve --mode development --open --hot",
+    "production": "webpack --mode production",
+    "lint": "npx eslint . --fix",
+    "predeploy": "npm run production",
+    "deploy": "gh-pages -d dist"
   },
   "repository": {
     "type": "git",
@@ -28,7 +32,10 @@
     "css-loader": "^5.2.6",
     "eslint": "^7.30.0",
     "eslint-loader": "^4.0.2",
+    "eslint-plugin-prettier": "^3.4.0",
+    "eslint-plugin-react": "^7.24.0",
     "html-webpack-plugin": "^5.3.2",
+    "prettier": "2.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
