--- a/react-editor/.eslintrc.json
+++ b/react-editor/.eslintrc.json
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
   "plugins": [
     "prettier",
@@ -14,6 +15,7 @@
       "jsx": true
     }
   },
+  "extends": "eslint:recommended",
   "rules": {
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
