--- a/react-editor/package.json
+++ b/react-editor/package.json
@@ -6,9 +6,8 @@
   "scripts": {
     "dev": "webpack serve --mode development --open --hot",
     "production": "webpack --mode production",
-    "lint": "npx eslint . --fix",
-    "predeploy": "npm run production",
-    "deploy": "gh-pages -d dist"
+    "deploy": "gh-pages -d dist",
+    "lint": "npx eslint . --fix"
   },
   "repository": {
     "type": "git",
@@ -22,7 +21,7 @@
   "bugs": {
     "url": "https://github.com/seonjakim/editor-react/issues"
   },
-  "homepage": "https://github.com/seonjakim/editor-react#readme",
+  "homepage": "https://seonjakim.github.io/editor-react/",
   "devDependencies": {
     "@babel/core": "^7.14.6",
     "@babel/preset-env": "^7.14.7",
@@ -34,6 +33,8 @@
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.4.0",
     "eslint-plugin-react": "^7.24.0",
+    "fuse-box": "^4.0.1-next.7",
+    "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "prettier": "2.3.2",
     "style-loader": "^3.0.0",
