--- a/vanilla-editor/.eslintrc.json
+++ b/vanilla-editor/.eslintrc.json
@@ -1,11 +1,13 @@
 {
   "env": {
     "browser": true,
-    "es6": true
+    "es6": true,
+    "node": true
   },
   "plugins": [
     "prettier"
   ],
+  "extends": "eslint:recommended",
   "parserOptions": {
     "ecmaVersion": 2020,
     "sourceType": "module"
