--- a/vue-editor/package.json
+++ b/vue-editor/package.json
@@ -1,31 +1,42 @@
 {
   "name": "vue-editor",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
+  "version": "0.1.0",
+  "private": true,
   "scripts": {
-    "dev": "webpack serve --mode development --open --hot",
-    "lint": "npx eslint . --fix"
-  },
-  "author": "seokim",
-  "license": "ISC",
-  "devDependencies": {
-    "@vue/compiler-sfc": "^3.1.4",
-    "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-loader": "^6.0.0",
-    "eslint": "7.30.0",
-    "eslint-plugin-prettier": "3.4.0",
-    "html-webpack-plugin": "^5.3.2",
-    "prettier": "2.3.2",
-    "style-loader": "^3.1.0",
-    "vue-loader": "^16.3.0",
-    "vue-template-compiler": "^2.6.14",
-    "webpack": "^5.44.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^3.11.2"
+    "serve": "vue-cli-service serve",
+    "build": "vue-cli-service build",
+    "lint": "vue-cli-service lint"
   },
   "dependencies": {
-    "@vue/cli": "^4.5.13",
-    "vue": "^3.1.4"
-  }
+    "core-js": "^3.6.5",
+    "vue": "^3.0.0"
+  },
+  "devDependencies": {
+    "@vue/cli-plugin-babel": "~4.5.0",
+    "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-service": "~4.5.0",
+    "@vue/compiler-sfc": "^3.0.0",
+    "babel-eslint": "^10.1.0",
+    "eslint": "^6.7.2",
+    "eslint-plugin-vue": "^7.0.0"
+  },
+  "eslintConfig": {
+    "root": true,
+    "env": {
+      "node": true
+    },
+    "extends": [
+      "plugin:vue/vue3-essential",
+      "eslint:recommended"
+    ],
+    "parserOptions": {
+      "parser": "babel-eslint"
+    },
+    "rules": {}
+  },
+  "browserslist": [
+    "> 1%",
+    "last 2 versions",
+    "not dead"
+  ]
 }
