--- a/react-editor/package.json
+++ b/react-editor/package.json
@@ -36,6 +36,7 @@
     "fuse-box": "^4.0.1-next.7",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "parcel-bundler": "^1.12.5",
     "prettier": "2.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.44.0",
