--- a/react-editor/package.json
+++ b/react-editor/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "webpack serve --mode development --open --hot",
     "production": "webpack --mode production",
+    "parcel:build": "NODE_ENV=production parcel build index.html -d parcel-dist --no-minify",
     "deploy": "gh-pages -d dist",
     "lint": "npx eslint . --fix"
   },
@@ -29,6 +30,7 @@
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
+    "cssnano": "^5.0.7",
     "eslint": "^7.30.0",
     "eslint-loader": "^4.0.2",
     "eslint-plugin-prettier": "^3.4.0",
@@ -37,6 +39,8 @@
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
     "parcel-bundler": "^1.12.5",
+    "postcss": "^8.3.6",
+    "postcss-cli": "^8.3.1",
     "prettier": "2.3.2",
     "style-loader": "^3.0.0",
     "webpack": "^5.44.0",
