--- a/react-editor/package.json
+++ b/react-editor/package.json
@@ -7,6 +7,7 @@
     "dev": "webpack serve --mode development --open --hot",
     "production": "webpack --mode production",
     "parcel:build": "NODE_ENV=production parcel build index.html -d parcel-dist --no-minify",
+    "rollup:build": "rollup -c rollup.config.js -w",
     "deploy": "gh-pages -d dist",
     "lint": "npx eslint . --fix"
   },
@@ -25,8 +26,13 @@
   "homepage": "https://seonjakim.github.io/editor/",
   "devDependencies": {
     "@babel/core": "^7.14.6",
+    "@babel/plugin-transform-runtime": "^7.14.5",
     "@babel/preset-env": "^7.14.7",
     "@babel/preset-react": "^7.14.5",
+    "@rollup/plugin-babel": "^5.3.0",
+    "@rollup/plugin-commonjs": "^19.0.2",
+    "@rollup/plugin-node-resolve": "^13.0.4",
+    "@rollup/plugin-replace": "^3.0.0",
     "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^5.2.6",
@@ -38,16 +44,25 @@
     "fuse-box": "^4.0.1-next.7",
     "gh-pages": "^3.2.3",
     "html-webpack-plugin": "^5.3.2",
+    "http-server": "^0.12.3",
     "parcel-bundler": "^1.12.5",
     "postcss": "^8.3.6",
     "postcss-cli": "^8.3.1",
     "prettier": "2.3.2",
+    "rollup": "^2.54.0",
+    "rollup-plugin-external-globals": "^0.6.1",
+    "rollup-plugin-import-css": "^3.0.0",
+    "rollup-plugin-livereload": "^2.0.5",
+    "rollup-plugin-peer-deps-external": "^2.2.4",
+    "rollup-plugin-serve": "^1.1.0",
+    "rollup-plugin-styles": "^3.14.1",
     "style-loader": "^3.0.0",
     "webpack": "^5.44.0",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
+    "@babel/runtime": "^7.14.8",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
   }
